# Lemur-Game

./: execution info.rdm
asset_converter/dest_asset/: BezierCurve.ply  Cube.ply  Cylinder.ply  Icosphere.ply  Plane.ply  Sphere.ply  body.arm  body.ply
asset_converter/src/: main.cpp  meson.build  src.kdev4
asset_converter/src/.kdev4/: src.kdev4
asset_converter/src_asset/: arthre2.glb  lemur.glb  mongoz.glb  plants.blend  test.blend  test.glb
assets/armatures/: Cylinder.arm  Monkey.arm  Monkey2.arm
assets/fonts/: noto.fnt
assets/models/: beach_ball.ply  branch.ply  branch_bamboo_1.ply  branch_strelitzia_1.ply  flower_bamboo_1.ply  flower_strelitzia_1.ply  flower_strelitzia_2.ply  leaf_bamboo_1.ply  leaf_strelitzia_1.ply  leaf_strelitzia_2.ply  lemur.ply  sky.ply
assets/shaders/: plant.vert  sky.frag  sky.vert  terrain.frag  terrain.vert  test.frag  test.vert  test_anim.frag  test_anim.vert  text.frag  text.vert  text2D.frag  text2D.vert  water.frag  water.vert
src/: cross_file_info.txt  definitions.h  ideas.txt  main.cpp  meson.build  src.kdev4  taskboard.txt
src/.kdev4/: src.kdev4
src/audio/: Audio.cpp  Audio.h
src/client/: Client.cpp  Client.h  ClientConfig.cpp  ClientConfig.h  ClientConnection.cpp  ClientConnection.h  ClientMenus.cpp  ClientMenus.h
src/entity/: BeachBall.cpp  BeachBall.h  EntityRegistry.h  EntitySystem.cpp  EntitySystem.h  EntityType.h
src/graphics/: Armature.cpp  Armature.h  DebugDraw.cpp  DebugDraw.h  FBO.cpp  FBO.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h
src/gui/: GUI.cpp  GUI.h  Text.cpp  Text.h
src/physics/: CollisionShape.cpp  CollisionShape.h  DBVH.cpp  DBVH.h  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsTypes.h
src/plants/: Plant.cpp  Plant.h  PlantMeshGen.cpp  PlantMeshGen.h  PlantSpecies.cpp  PlantSpecies.h
src/scene/: Player.cpp  Player.h  Scene.cpp  Scene.h  Sky.cpp  Sky.h  Terrain.cpp  Terrain.h  WaterPlane.cpp  WaterPlane.h
src/server/: Packet.cpp  Packet.h  Server.cpp  Server.h  ServerConfig.cpp  ServerConfig.h  ServerConnection.cpp  ServerConnection.h
